# capstone

./: .gitattributes  .gitignore  CLAUDE.md  DATA.md  PLAN.md  README.md  WSL.md  analyze.py  colab_run.ipynb  colab_setup.ipynb  pyproject.toml  run_all.sh  unzip_data.py
.agents/: AGENTS.md
artifacts/: analysis_2d.json  analysis_3d.json
artifacts/runs/centralized_2d_42/: metrics.jsonl
artifacts/runs/fedavg_2d_42/: metrics.jsonl
artifacts/runs/fedbn_2d_42/: metrics.jsonl
artifacts/runs/local_2d_42/: config.json  metrics.jsonl
artifacts/splits/: partition.json
docs/: 01-overview.md  02-background.md  03-architecture.md  04-data-pipeline.md  05-methods.md  06-running.md  07-evaluation.md  08-design-decisions.md  09-roadmap.md  README.md  architecture.md  capstone_project_report.md  data-pipeline.md  data.md  environments.md  experiments.md  federated-learning.md  methodology.md  pipeline-walkthrough.md  progress-log.md  project_report.md  project_status_report.md  specs.md  workflow.md
fl/: brats_client.py  build_cache.py  evaluate.py  finetune.py  run_fedavg.py  run_local_baselines.py
scripts/: analyze.py  build_cache.py  build_partition.py  demo_server.py  plot_results.py  run_experiment.py
src/braintumor_fl/: __init__.py  data.py  model.py  partition.py  personalization.py  results.py  train_centralized.py  trainer.py
src/fedbrats/: __init__.py  config.py  data.py  federated.py  logging_utils.py  metrics.py  model.py  partition.py  shift.py  train.py
src/fedbrats/static/: app.js  index.html  marching_cubes.js  style.css  wasm_marching_cubes.wasm
tests/: test_data.py  test_metrics.py  test_model.py  test_partition.py
wasm_marching_cubes/: Cargo.toml
wasm_marching_cubes/src/: lib.rs
