[project]
name = "braintumor-fl"
version = "0.1.0"
description = "Personalized Federated Learning for 2D brain tumor segmentation (BraTS/FeTS) with NVIDIA FLARE + MONAI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Medical imaging model + transforms
    "monai>=1.3",
    "nibabel>=5.2",          # read .nii.gz MRI volumes
    "einops>=0.7",           # some MONAI networks need it
    # Federated learning
    "nvflare>=2.5",
    # Core DL
    "torch>=2.2",
    "torchvision>=0.17",
    # Data / science
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-image>=0.22",
    "scikit-learn>=1.4",
    "pandas>=2.1",           # FeTS institutional partition CSVs
    # Eval / viz / progress
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "tensorboard>=2.16",
]

[project.optional-dependencies]
# Differential privacy — only if we add the Phase-4 privacy stretch goal.
dp = ["opacus>=1.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/braintumor_fl"]

# ---------------------------------------------------------------------------
# CUDA torch for the RTX 3050 (Ampere). Pulls torch/torchvision from the cu124
# index instead of CPU wheels. Delete this block for CPU-only.
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
