[project]
name = "fedbrats"
version = "0.1.0"
description = "Personalized federated learning (FedBN) for brain tumor segmentation on BraTS 2021"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Medical imaging model + transforms
    "monai>=1.3",
    "nibabel>=5.2",          # read .nii.gz MRI volumes
    "einops>=0.7",           # some MONAI networks need it
    # Core DL
    "torch>=2.2",
    "torchvision>=0.17",
    # Data / science
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-image>=0.22",
    "scikit-learn>=1.4",
    "pandas>=2.1",           # FeTS institutional partition CSVs
    # Eval / viz / progress
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "tensorboard>=2.16",
]

[project.optional-dependencies]
# NVIDIA FLARE is Linux-only: it imports the POSIX-only stdlib `resource` module
# (nvflare/fuel/f3/cellnet/net_agent.py). Installing it on Windows succeeds but importing
# it raises ModuleNotFoundError. The Phase-2 FLARE port therefore runs on WSL2/Colab only;
# the custom loop (federated.py) runs everywhere. See docs/environments.md.
flare = ["nvflare>=2.5 ; sys_platform != 'win32'"]
# Differential privacy — only if we add the Phase-4 privacy stretch goal.
dp = ["opacus>=1.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fedbrats"]

# ---------------------------------------------------------------------------
# CUDA torch for the RTX 3050 (Ampere). Pulls torch/torchvision from the cu124
# index instead of CPU wheels. Delete this block for CPU-only.
# Windows and Linux both have cu124 wheels on this index.
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
